新增文件选择

--- a/LibImmersive/src/main/res/values/com_bihe0832_lib_immersive_res.xml
+++ b/LibImmersive/src/main/res/values/com_bihe0832_lib_immersive_res.xml
@@ -1,4 +1,10 @@
 <resources>
-    <color name="colorPrimaryDark">#0288D1</color>
-    <color name="navigationBarColor">#202020</color>
+
+    <!--    主题相关配色-->
+    <!--主色调 -->
+    <color name="colorPrimary">#3F51B5</color>
+    <!--状态栏颜色-->
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="navigationBarColor">#212121</color>
+
 </resources>
