dialog 优化，历史日志自动删除

--- a/LibDialog/src/main/res/layout/com_bihe0832_commonm_dialog_layout.xml
+++ b/LibDialog/src/main/res/layout/com_bihe0832_commonm_dialog_layout.xml
@@ -54,6 +54,7 @@
             android:textColor="@color/dialog_text"
             android:textSize="15dp"
             android:visibility="gone"
+            tools:visibility="visible"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/content" />
 
