优化部分机型获取日志目录异常

--- a/LibFile/src/main/res/xml/file_paths.xml
+++ b/LibFile/src/main/res/xml/file_paths.xml
@@ -2,4 +2,8 @@
 <paths>
     <external-files-path name="zixie_download" path="Download/"/>
     <external-files-path name="download" path="Download/"/>
+    <files-path name="zixie_download" path="Download/"/>
+    <files-path name="download" path="Download/"/>
+    <external-path name="zixie_download" path="Download/"/>
+    <external-path name="download" path="Download/"/>
 </paths>
