不同屏幕显示适配

--- a/BaseTest/src/main/res/layout/fragment_test_basic.xml
+++ b/BaseTest/src/main/res/layout/fragment_test_basic.xml
@@ -29,7 +29,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:text="加载网络JPG"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
 
 
             <Button
