--- a/CommonTest/src/main/res/layout/com_bihe0832_card_test_log_header.xml
+++ b/CommonTest/src/main/res/layout/com_bihe0832_card_test_log_header.xml
@@ -2,10 +2,10 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
+        android:layout_height="48dp"
         android:orientation="vertical"
         android:background="@color/colorControlNormal"
-        android:padding="16dp">
+        android:padding="12dp">
 
     <TextView
             android:id="@+id/demo_text"
@@ -16,7 +16,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:textStyle="bold"
             android:text="demo_header"
-            android:textSize="17dp" />
+            android:textSize="12dp" />
 
 </android.support.constraint.ConstraintLayout>
