--- a/LibAdapter/src/main/res/values/dimens.xml
+++ b/LibAdapter/src/main/res/values/dimens.xml
@@ -7,7 +7,7 @@
     <dimen name="dp_40">40dp</dimen>
     <dimen name="dp_72">72dp</dimen>
 
-    <dimen name="sp_12">12sp</dimen>
-    <dimen name="sp_14">14sp</dimen>
-    <dimen name="sp_16">16sp</dimen>
+    <dimen name="sp_12">12dp</dimen>
+    <dimen name="sp_14">14dp</dimen>
+    <dimen name="sp_16">16dp</dimen>
 </resources>
