--- a/LibPermission/src/main/res/layout/com_bihe0832_lib_permissions_activity.xml
+++ b/LibPermission/src/main/res/layout/com_bihe0832_lib_permissions_activity.xml
@@ -3,5 +3,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:background="@color/transparent"
         android:adjustViewBounds="true" />
 
