权限弹框优化，支持更多定制

--- a/LibPermission/src/main/res/values/com_bihe0832_lib_permission_res.xml
+++ b/LibPermission/src/main/res/values/com_bihe0832_lib_permission_res.xml
@@ -3,7 +3,7 @@
     <string name="permission_default_scene">完整</string>
     <string name="permission_default_desc">部分设备</string>
     <string name="permission_negtive">暂不开启</string>
-    <string name="permission_positive">前往开启</string>
+    <string name="permission_positive">点击开启</string>
     <string name="permission_color">#38ADFF</string>
     <color name="transparent">#00000000</color>
 
