--- a/Framework/src/main/res/values/activity_theme.xml
+++ b/Framework/src/main/res/values/activity_theme.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="Title.Base" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:textSize">16dp</item>
@@ -39,10 +39,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="activityTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowAnimationStyle">@style/Animation.Activity</item>
-        <item name="android:windowTranslucentNavigation">true</item>
-        <item name="android:windowTranslucentStatus">true</item>
+    <style name="baseActivityTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowTranslucentNavigation" tools:targetApi="kitkat">true</item>
+        <item name="android:windowTranslucentStatus" tools:targetApi="kitkat">true</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsTranslucent">false</item>
         <item name="android:windowActionBar">false</item>
@@ -66,25 +65,37 @@
         <item name="android:textColorPrimary">@color/colorPrimaryText</item>
     </style>
 
+    <style name="activityTheme" parent="baseActivityTheme">
+        <item name="android:windowAnimationStyle">@style/Animation.Activity</item>
+    </style>
 
-    <!--    主要用于闪屏 -->
+    <!--    全屏，主要用于闪屏 -->
     <style name="fullscreenActivityTheme" parent="activityTheme">
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowFullscreen">true</item>
     </style>
 
-    <!--使用 transparentActivityTheme 主题的Activity 不要定义 screenOrientation -->
-    <style name="transparentActivityTheme" parent="fullscreenActivityTheme">
+    <!-- 全屏且彻底透明 使用 transparentWindowTheme 主题的Activity 不要定义 screenOrientation，慎用 -->
+    <style name="transparentWindowTheme" parent="fullscreenActivityTheme">
+        <!--  它可以将应用了该 Style 的 Activity 所在的 Window 设置成透明的， 使用windowIsTranslucent 的Activity 不要定义 screenOrientation-->
         <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
-    <!--使用 bottomShare 主题的Activity 不要定义 screenOrientation -->
-    <style name="bottomShare" parent="activityTheme">
+    <!--  全屏透明但window 不透明，没有指定动画，没有 windowIsTranslucent 和  windowAnimationStyle，用于弹窗等 -->
+    <style name="fullscreenTransparentActivityTheme" parent="baseActivityTheme">
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowFullscreen">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:windowIsTranslucent">true</item>
+        <!--  是否向下传递触摸事件-->
         <item name="android:splitMotionEvents">false</item>
+    </style>
+
+
+    <style name="bottomShare" parent="fullscreenTransparentActivityTheme">
         <item name="android:activityOpenEnterAnimation">@anim/push_bottom_in</item>
         <item name="android:activityOpenExitAnimation">@anim/push_bottom_out</item>
     </style>
+
 
 </resources>
