--- a/Framework/src/main/res/values/activity_theme.xml
+++ b/Framework/src/main/res/values/activity_theme.xml
@@ -39,8 +39,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="activityTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowAnimationStyle">@style/Animation.Activity</item>
+    <style name="baseActivityTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowNoTitle">true</item>
@@ -66,25 +65,36 @@
         <item name="android:textColorPrimary">@color/colorPrimaryText</item>
     </style>
 
+    <style name="activityTheme" parent="baseActivityTheme">
+        <item name="android:windowAnimationStyle">@style/Animation.Activity</item>
+    </style>
 
-    <!--    主要用于闪屏 -->
+    <!--    全屏，主要用于闪屏 -->
     <style name="fullscreenActivityTheme" parent="activityTheme">
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowFullscreen">true</item>
     </style>
 
-    <!--使用 transparentActivityTheme 主题的Activity 不要定义 screenOrientation -->
-    <style name="transparentActivityTheme" parent="fullscreenActivityTheme">
+
+    <style name="dialogActivity" parent="fullscreenActivityTheme">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!--  它可以将应用了该 Style 的 Activity 所在的 Window 设置成透明的， 使用windowIsTranslucent 的Activity 不要定义 screenOrientation-->
         <item name="android:windowIsTranslucent">true</item>
+        <!--  是否向下传递触摸事件，false 无背景-->
+        <item name="android:splitMotionEvents">false</item>
     </style>
 
     <!--使用 bottomShare 主题的Activity 不要定义 screenOrientation -->
-    <style name="bottomShare" parent="activityTheme">
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:windowIsTranslucent">true</item>
-        <item name="android:splitMotionEvents">false</item>
+    <style name="bottomShare" parent="dialogActivity">
+
         <item name="android:activityOpenEnterAnimation">@anim/push_bottom_in</item>
         <item name="android:activityOpenExitAnimation">@anim/push_bottom_out</item>
+
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+
+        <item name="android:windowFullscreen">true</item>
     </style>
+
 
 </resources>
