--- a/CommonSplash/src/main/res/layout/com_bihe0832_activity_splash.xml
+++ b/CommonSplash/src/main/res/layout/com_bihe0832_activity_splash.xml
@@ -11,7 +11,7 @@
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="120dp"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             android:src="@mipmap/icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
