--- a/CommonTest/src/main/res/layout/com_bihe0832_fragment_test_tab.xml
+++ b/CommonTest/src/main/res/layout/com_bihe0832_fragment_test_tab.xml
@@ -24,7 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_alignParentBottom="true"
-                android:background="#c9c9c9"
+                android:background="@color/activity_test_bg"
                 android:textIsSelectable="true" />
 
         <android.support.v7.widget.RecyclerView
