--- a/CommonTest/src/main/res/values/test_res.xml
+++ b/CommonTest/src/main/res/values/test_res.xml
@@ -2,5 +2,6 @@
 <resources>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">30dp</dimen>
+    <color name="activity_test_bg">#c9c9c9</color>
 
 </resources>
