--- a/CommonTest/src/main/res/values/test_res.xml
+++ b/CommonTest/src/main/res/values/test_res.xml
@@ -3,5 +3,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">30dp</dimen>
     <color name="activity_test_bg">#c9c9c9</color>
+    <color name="common_test_tips_text">@color/white</color>
+    <color name="common_test_tips_bg">@color/colorAccent</color>
+
+    <color name="common_test_text">@color/black</color>
+    <color name="common_test_bg">@color/colorAccent</color>
 
 </resources>
