--- a/LibDialog/src/main/res/values/com_bihe0832_common_base_dialog_res.xml
+++ b/LibDialog/src/main/res/values/com_bihe0832_common_base_dialog_res.xml
@@ -32,6 +32,7 @@
     <color name="dialog_text">#202020</color>
     <color name="dialog_hint">#333333</color>
     <color name="dialog_button">#333333</color>
-    <color name="dialog_tips">#F44C36</color>
+    <color name="dialog_tips">@color/select_state_pressed</color>
     <color name="dialog_split">#EEEEEE</color>
+
 </resources>
