--- a/BaseTest/src/main/res/values/dialog_test_res.xml
+++ b/BaseTest/src/main/res/values/dialog_test_res.xml
@@ -5,4 +5,12 @@
         <item name="android:windowMinWidthMajor">55%</item>
         <item name="android:windowMinWidthMinor">80%</item>
     </style>
+
+
+    <color name="common_test_tips_text">@color/black</color>
+    <color name="common_test_tips_bg">@color/colorAccent</color>
+    <color name="common_test_text">@color/black</color>
+    <color name="common_test_bg">@color/white</color>
+
+
 </resources>
