--- a/LibDialog/src/main/res/values/com_bihe0832_common_base_dialog_res.xml
+++ b/LibDialog/src/main/res/values/com_bihe0832_common_base_dialog_res.xml
@@ -35,4 +35,9 @@
     <color name="dialog_tips">@color/select_state_pressed</color>
     <color name="dialog_split">#EEEEEE</color>
 
+    <dimen name="dialog_title_text_size">16dp</dimen>
+    <dimen name="dialog_content_text_size">12dp</dimen>
+    <dimen name="dialog_tips_text_size">10dp</dimen>
+    <dimen name="dialog_button_text_size">@dimen/dialog_content_text_size</dimen>
+
 </resources>
