--- a/LibDialog/src/main/res/values/com_bihe0832_common_base_dialog_res.xml
+++ b/LibDialog/src/main/res/values/com_bihe0832_common_base_dialog_res.xml
@@ -22,22 +22,22 @@
 
         <!--输入框适配-->
         <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
-        <item name="android:textColorPrimary">@color/dialog_text</item>
-        <item name="android:textColorSecondary">@color/dialog_text</item>
-        <item name="android:textColorHint">@color/dialog_hint</item>
-        <item name="android:textColorHintInverse">@color/dialog_hint</item>
+        <item name="android:textColorPrimary">@color/com_bihe0832_dialog_text</item>
+        <item name="android:textColorSecondary">@color/com_bihe0832_dialog_text</item>
+        <item name="android:textColorHint">@color/com_bihe0832_dialog_hint</item>
+        <item name="android:textColorHintInverse">@color/com_bihe0832_dialog_hint</item>
     </style>
 
-    <color name="dialog_bg">#FFFFFF</color>
-    <color name="dialog_text">#202020</color>
-    <color name="dialog_hint">#333333</color>
-    <color name="dialog_button">#333333</color>
-    <color name="dialog_tips">@color/select_state_pressed</color>
-    <color name="dialog_split">#EEEEEE</color>
+    <color name="com_bihe0832_dialog_bg">#FFFFFF</color>
+    <color name="com_bihe0832_dialog_text">#202020</color>
+    <color name="com_bihe0832_dialog_hint">#333333</color>
+    <color name="com_bihe0832_dialog_button">#333333</color>
+    <color name="com_bihe0832_dialog_tips">@color/com_bihe0832_select_state_pressed</color>
+    <color name="com_bihe0832_dialog_split">#EEEEEE</color>
 
-    <dimen name="dialog_title_text_size">16dp</dimen>
-    <dimen name="dialog_content_text_size">12dp</dimen>
-    <dimen name="dialog_tips_text_size">10dp</dimen>
-    <dimen name="dialog_button_text_size">@dimen/dialog_content_text_size</dimen>
+    <dimen name="com_bihe0832_dialog_title_text_size">16dp</dimen>
+    <dimen name="com_bihe0832_dialog_content_text_size">12dp</dimen>
+    <dimen name="com_bihe0832_dialog_tips_text_size">10dp</dimen>
+    <dimen name="com_bihe0832_dialog_button_text_size">@dimen/com_bihe0832_dialog_content_text_size</dimen>
 
 </resources>
