--- a/LibRefresh/src/main/res/values/colors.xml
+++ b/LibRefresh/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>s
-    <color name="lib_refresh_text_color">@android:color/white</color>
-    <color name="lib_refresh_bg_color">#33000000</color>
+    <color name="com_bihe0832_refresh_text_color">@android:color/white</color>
+    <color name="com_bihe0832_refresh_bg_color">#33000000</color>
 </resources>
