--- a/LibViewExt/src/main/res/drawable/com_bihe0832_common_radio_selctor_default.xml
+++ b/LibViewExt/src/main/res/drawable/com_bihe0832_common_radio_selctor_default.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="@dimen/select_item_width"/>
+    <corners android:radius="@dimen/com_bihe0832_select_item_width"/>
 
     <solid
-            android:color="@color/select_bg"/>
+            android:color="@color/com_bihe0832_select_bg"/>
 
     <size
-            android:height="@dimen/select_item_width"
-            android:width="@dimen/select_item_width"/>
+            android:height="@dimen/com_bihe0832_select_item_width"
+            android:width="@dimen/com_bihe0832_select_item_width"/>
 
     <stroke
-            android:width="@dimen/select_border_width"
-            android:color="@color/select_default"/>
+            android:width="@dimen/com_bihe0832_select_border_width"
+            android:color="@color/com_bihe0832_select_default"/>
 
 </shape>
