--- a/LibWebview/src/main/res/values/com_bihe0832_webview_string.xml
+++ b/LibWebview/src/main/res/values/com_bihe0832_webview_string.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="web_process_name">:web</string>
+    <string name="com_bihe0832_web_process_name">:web</string>
 </resources>
