--- a/BaseTest/src/main/res/layout/fragment_test_image.xml
+++ b/BaseTest/src/main/res/layout/fragment_test_image.xml
@@ -39,9 +39,9 @@
 
             <ImageView
                     android:id="@+id/test_image_local_target"
-                    android:layout_width="match_parent"
+                    android:layout_width="180dp"
                     android:layout_height="180dp"
-                    android:scaleType="fitCenter"/>
+                    android:scaleType="fitXY"/>
         </LinearLayout>
 
     </ScrollView>
