--- a/BaseTest/src/main/res/layout/fragment_test_text.xml
+++ b/BaseTest/src/main/res/layout/fragment_test_text.xml
@@ -6,9 +6,9 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-    <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+<!--    <ScrollView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent">-->
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -74,5 +74,5 @@
 
         </LinearLayout>
 
-    </ScrollView>
+<!--    </ScrollView>-->
 </FrameLayout>
