通用弹框菜单栏及，长按菜单栏

--- a/LibDialog/src/main/res/layout/com_bihe0832_pop_menu_item.xml
+++ b/LibDialog/src/main/res/layout/com_bihe0832_pop_menu_item.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
